--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config=config/webpack.prod.js",
-    "dev": "webpack --config=config/webpack.dev.js",
-    "prod": "webpack-dev-server --open --config=config/webpack.prod.js",
-    "watch": "webpack --config=config/webpack.prod.js --watch"
+    "dev": "webpack --config=config/webpack.dev.js --watch"
   },
   "author": "",
   "license": "ISC",
@@ -48,6 +46,7 @@
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.1",
     "less-loader": "^4.0.5",
+    "react-router-dom": "^4.2.2",
     "redux-logger": "^3.0.6",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
