--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config=config/webpack.prod.js",
-    "dev": "webpack --config=config/webpack.dev.js --watch"
+    "dev": "webpack --config=config/webpack.dev.js --watch",
+    "server": "webpack --config=config/webpack.prod.js --watch"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "babel-runtime": "^6.26.0",
     "babelify": "^8.0.0",
     "bootstrap": "^4.0.0",
+    "core-decorators": "^0.20.0",
     "css-loader": "^0.28.9",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
