--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
