--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -31,6 +31,7 @@
     "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
+    "reactstrap": "^4.8.0",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
