--- a/src/main/app/package.json
+++ b/src/main/app/package.json
@@ -21,10 +21,12 @@
     "babel-runtime": "^6.26.0",
     "babelify": "^8.0.0",
     "bootstrap": "^4.0.0",
+    "classnames": "^2.2.5",
     "core-decorators": "^0.20.0",
     "css-loader": "^0.28.9",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
@@ -38,6 +40,8 @@
     "webpack": "^3.11.0"
   },
   "devDependencies": {
+    "babel-plugin-direct-import": "^0.5.0",
+    "babel-plugin-import": "^1.6.5",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -45,6 +49,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "clean-webpack-plugin": "^0.1.18",
     "extract-text-webpack-plugin": "^3.0.2",
     "font-awesome": "^4.7.0",
